    - Added NATIVE_DOUBLES configuration option to avoid loss of precision
      when passing double values between Perl and Java
    - New interface for processing callbacks from java to perl.
    - Added support for java.lang.CharSequence as a primitive type. Any
      Perl scalar passed as a java.lang.CharSequence will instantiate
      a java.lang.String on the Java side
    - Other minor bug fixes

0.50  Mon Jan 31 20:14:43 EST 2005
    - Added HOST configuration option to access JVM server remotely
    - Fixed bug with paths in Cygwin
    - Fixed bug with regexp that was badly interpreted under the debugger
    - Extended InlineJavaClassLoader from current thread ClassLoader to enable it to work
      properly under Tomcat
    - Include patch by Ihab Awad that allows running the JVM server inside Tomcat
    - Fixed bug with longs over 32 bits in length and loosened boundary checking in numeric values
      since it was not portable
    - Fixed bug (found by Dean Thayer) with socket not closed properly in Java
    - Other minor bug fixes

0.49  
    - Added PerlInterpreter: require/eval Perl code directly from Java
    - Reworked type casting: changes are NOT backwards compatible :(
    - Callbacks can now be called in list context using "@function_name"
    - Renamed PerlNatives stuff
    - Added external command line tool to start/stop a SHARED_JVM server
    - Applied JNI memory leak patch by Jeff Janes
    - Removed exports from Inline::Java::Portable
    - Split and updated documentation

0.47  Sat Feb 14 10:00:00 EST 2004
    - Fixed bugs in portability code and added HPUX, AIX and Solaris specifics
    - Tweaked CLASSPATH directory order
	- Changed port numbers for SHARED_JVM tests in order to avoid clashes
      with running installations
    - Made PerlNatives optional
    
0.46  Web Feb 04 20:00:00 EST 2004
    - Fixed Natives.xs to work with ExtUtils::ParseXS

0.45  Fri Jan 30 20:00:00 EST 2004