@@ -4,7 +4,7 @@ package Inline::Java::JNI ;
 
 use strict ;
 
-$Inline::Java::JNI::VERSION = '0.50_92' ;
+$Inline::Java::JNI::VERSION = '0.50_93' ;
 
 use DynaLoader ;
 use Carp ;
