@@ -2,6 +2,6 @@ package Inline::Java::PerlNatives ;
 
 use strict ;
 
-$Inline::Java::PerlNatives::VERSION = '0.50_92' ;
+$Inline::Java::PerlNatives::VERSION = '0.50_93' ;
 
 1 ;
