@@ -12,11 +12,38 @@ print "\nWelcome to the Inline::Java installation procedure.\n\n" ;
 # Grab the J2SDK argument
 my $jdk_dir = '' ;
 for (my $i = 0 ; $i < scalar(@ARGV) ; $i++){
+	my $remove = 0 ;
 	if ($ARGV[$i] =~ /^J2SDK=(.+)$/){
 		$jdk_dir = $1 ;
+		$remove = 1 ;
+	}
+	elsif ($ARGV[$i] =~ /^BUILD_JNI=(.+)$/){
+		$main::build_jni = $1 ;
+		$remove = 1 ;
+	}
+	elsif ($ARGV[$i] =~ /^BUILD_PERL_NATIVES=(.+)$/){
+		$main::build_perl_natives = $1 ;
+		$remove = 1 ;
+	}
+	elsif ($ARGV[$i] =~ /^BUILD_PERL_INTERPRETER=(.+)$/){
+		$main::build_perl_interpreter = $1 ;
+		$remove = 1 ;
+	}
+	elsif ($ARGV[$i] =~ /^JVM_LIB_TYPE=(.+)$/){
+		$main::jvm_lib_type = $1 ;
+		$remove = 1 ;
+	}
+	if ($remove){
 		splice(@ARGV, $i, 1) ;
 		$i-- ;
 	}
+}
+
+if (! $jdk_dir){
+	my $try = $ENV{PERL_INLINE_JAVA_J2SDK} || $ENV{JAVA_HOME} 
+		|| Inline::Java::Portable::portable('DEFAULT_J2SDK_DIR') ;
+	print "Using $try as J2SDK directory.\n\n" if $try ;
+	$jdk_dir = $try ;
 }
 
 if (! $jdk_dir){
@@ -25,7 +52,7 @@ if (! $jdk_dir){
 		require File::Spec->catfile('Java', 'default_j2sdk.pl') ;
 		$jdk_dir = Inline::Java::get_default_j2sdk() ;
 	}
-	else{
+	else {
 		print <<NO_J2SDK;
 A Java 2 SDK is required to install and use Inline::Java. Please 
 specify your Java 2 SDK installation directory using the J2SDK 
