@@ -12,6 +12,10 @@ Revision history for Perl extension Inline::Java
     - Added support for java.lang.CharSequence as a primitive type. Any
       Perl scalar passed as a java.lang.CharSequence will instantiate
       a java.lang.String on the Java side
+    - Added BUILD_JNI, BUILD_PERL_NATIVES, BUILD_PERL_INTERPRETER and JVM_LIB_TYPE build 
+      configuration options to help with automated builds
+    - Added BIND configuration option. See docs for details. 
+      Note: The Java JVM server noe listens on localhost by default (instead of 0.0.0.0).
     - Other minor bug fixes
 
 0.50  Mon Jan 31 20:14:43 EST 2005
